@@ -27,6 +27,7 @@ Version 0.4i
  - You must have completed "Outlaws path into Rigard" and Krawitz to unlock him
  - He has some talk options
  - If you have big tits, you can give him a titfuck
+ - He can send you on tasks. Currently only one available
 
 --------------------------------------------
              PREVIOUS VERSIONS
